@@ -84,13 +84,12 @@ public interface ArgumentsAggregator {
 	 * aggregation
 	 * @since 5.13
 	 */
-	@API(status = EXPERIMENTAL, since = "5.13")
+	@API(status = EXPERIMENTAL, since = "6.0")
 	default @Nullable Object aggregateArguments(ArgumentsAccessor accessor, FieldContext context)
 			throws ArgumentsAggregationException {
-		throw new JUnitException(
-			String.format("ArgumentsAggregator does not override the convert(ArgumentsAccessor, FieldContext) method. "
-					+ "Please report this issue to the maintainers of %s.",
-				getClass().getName()));
+		throw new JUnitException("""
+				ArgumentsAggregator does not override the convert(ArgumentsAccessor, FieldContext) method. \
+				Please report this issue to the maintainers of %s.""".formatted(getClass().getName()));
 	}
 
 }
