@@ -11,7 +11,7 @@
 package org.junit.jupiter.params.provider;
 
 import static org.apiguardian.api.API.Status.DEPRECATED;
-import static org.apiguardian.api.API.Status.EXPERIMENTAL;
+import static org.apiguardian.api.API.Status.MAINTAINED;
 
 import java.lang.annotation.Annotation;
 import java.util.ArrayList;
@@ -38,7 +38,7 @@ import org.junit.platform.commons.util.Preconditions;
  * @see org.junit.jupiter.params.provider.ArgumentsProvider
  * @see org.junit.jupiter.params.support.AnnotationConsumer
  */
-@API(status = EXPERIMENTAL, since = "5.10")
+@API(status = MAINTAINED, since = "5.13.3")
 public abstract class AnnotationBasedArgumentsProvider<A extends Annotation>
 		implements ArgumentsProvider, AnnotationConsumer<A> {
 
@@ -69,13 +69,13 @@ public abstract class AnnotationBasedArgumentsProvider<A extends Annotation>
 	 * {@link #provideArguments(ParameterDeclarations, ExtensionContext, Annotation)}
 	 * instead.
 	 */
-	@Deprecated
+	@Deprecated(since = "5.13")
 	@API(status = DEPRECATED, since = "5.13")
 	protected Stream<? extends Arguments> provideArguments(ExtensionContext context, A annotation) {
-		throw new JUnitException(String.format(
-			"AnnotationBasedArgumentsProvider does not override the provideArguments(ParameterDeclarations, ExtensionContext, Annotation) method. "
-					+ "Please report this issue to the maintainers of %s.",
-			getClass().getName()));
+		throw new JUnitException("""
+				AnnotationBasedArgumentsProvider does not override the \
+				provideArguments(ParameterDeclarations, ExtensionContext, Annotation) method. \
+				Please report this issue to the maintainers of %s.""".formatted(getClass().getName()));
 	}
 
 	/**
