@@ -19,13 +19,11 @@ import static org.junit.platform.engine.support.discovery.SelectorResolver.Resol
 
 import java.net.URI;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.Predicate;
 
 import org.junit.jupiter.api.Test;
-import org.junit.platform.commons.support.Resource;
+import org.junit.platform.commons.io.ResourceFilter;
 import org.junit.platform.engine.TestDescriptor;
 import org.junit.platform.engine.UniqueId;
 import org.junit.platform.engine.discovery.ClasspathResourceSelector;
@@ -37,10 +35,10 @@ class ResourceContainerSelectorResolverTest {
 
 	final TestDescriptor engineDescriptor = new EngineDescriptor(UniqueId.forEngine("resource-engine"),
 		"Resource Engine");
-	final Predicate<Resource> isResource = resource -> resource.getName().endsWith(".resource");
+	final ResourceFilter resourceFilter = ResourceFilter.of(resource -> resource.getName().endsWith(".resource"));
 
 	final EngineDiscoveryRequestResolver<TestDescriptor> resolver = EngineDiscoveryRequestResolver.builder() //
-			.addResourceContainerSelectorResolver(isResource) //
+			.addResourceContainerSelectorResolver(resourceFilter) //
 			.addSelectorResolver(new ResourceSelectorResolver()) //
 			.build();
 
@@ -120,7 +118,7 @@ class ResourceContainerSelectorResolverTest {
 		var defaultPackageResource = "/default-package.resource";
 		var resourceUri = getClass().getResource(defaultPackageResource).toString();
 		var uri = URI.create(resourceUri.substring(0, resourceUri.length() - defaultPackageResource.length()));
-		return Collections.singleton(Path.of(uri));
+		return Set.of(Path.of(uri));
 	}
 
 	private static class ResourceSelectorResolver implements SelectorResolver {
